# hello-cpp

./: hello-cpp.code-workspace
projects/stash/: CMakeLists.txt  copyAndSwap.cpp  lambda.cpp  perfectForwarding.cpp  ruleOfZero.cpp  sfinae.cpp  synchronization.cpp
projects/stash-fail/: CMakeLists.txt  Makefile  ruleOfZeroCf.cpp  ruleOfZeroCf_test.py  ruleOfZero_test.py  staticAssert.cpp  staticAssert_test.py
